[package]
name = "diamond-transport"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "WorkerGlobalScope", "console"] }
console_error_panic_hook = "0.1"
rustls = "0.21"
webpki-roots = "0.25"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
